tests/baselines/reference/anyDeclare.errors.txt
anyDeclare.ts(3,9): error TS2300: Duplicate identifier 'myFn'.
anyDeclare.ts(4,14): error TS2300: Duplicate identifier 'myFn'.


==== anyDeclare.ts (2 errors) ====
    declare var x: any;
    module myMod {
        var myFn;
            ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.
        function myFn() {  }
                 ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.
    }
    